--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -15,7 +15,7 @@
   </head>
   <body >
     {% section 'header' %}
-    <main role="main" class="bg-red-400">
+    <main role="main">
       {{ content_for_layout }}
     </main>
   </body>
